# confluex-AI-powered-research-workspace

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_WORKLOG.md  BACKLOG.md  CLAUDE.md  CORE_FEATURES.md  JOURNAL.md  PLAN.md  README.md  USER_STORIES.md  WORKFLOW.md  WORKLOG.md  alembic.ini  app.py  database_schema.sql  pyproject.toml  requirements.txt  skills-lock.json  test_fastapi.py  test_register.py
.codex/: AGENTS.md  config.toml
.streamlit/: config.toml
backend/: config.py  main.py  security.py
docs/: TEST_POSTMAN.md  backend-diagram.md  database.md  feature-map.md  user-journey.html  user-journey.md
frontend/: .gitignore  README.md  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
pages/: 1_🔍_New_Review.py  2_📚_My_Reviews.py  3_📄_Paper_Library.py  4_⚙️_Settings.py
plans/: README.md  citations_references_plan.md  deep-search-mode.md  multi-paper-chat-selection.md  phase-1-foundation.md  phase-3-writer-qa.md  phase-4-ui-deployment.md  user_subscriptions.md  vercel-render-deployment-plan.md
scripts/: build_index.py  run_eval_metric_samples.py  sync_backlog_to_trello.py  sync_user_journey_to_trello.py
setting_page/: Pricing.html  Settings.html  Writer Workspace.html
src/: config.py
tests/: conftest.py  test_admin.py  test_app_config.py  test_auth.py  test_credits.py  test_deep_search.py  test_document_extraction.py  test_eval_metrics.py  test_frontend_config.py  test_frontend_deep_search_static.py  test_frontend_pipeline_static.py  test_frontend_terms_static.py  test_frontend_writer_static.py  test_graph.py  test_llm_embeddings.py  test_paper_citations.py  test_paper_conversations.py  test_payment_orders.py  test_pipeline.py  test_project_conversations.py  test_projects.py  test_quota_enforcement.py  test_reference_files.py  test_search_quality.py  test_searcher_reader.py  test_sepay_webhook.py  test_services.py  (+6 more)
(+175 files in other folders)
