[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "automated-literature-review"
version = "0.1.0"
description = "Phase 1 foundation for the automated literature review platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0,<1.0.0",
  "alembic>=1.16.0,<2.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "feedparser>=6.0.11,<7.0.0",
  "greenlet>=3.1.1,<4.0.0",
  "httpx>=0.27.0,<1.0.0",
  "langgraph>=0.2.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "PyMuPDF>=1.24.0,<2.0.0",
  "PyJWT>=2.9.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn>=0.32.0,<1.0.0",
  "google-auth>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0,<25.0.0",
  "mypy>=1.13.0,<2.0.0",
  "pre-commit>=4.0.1,<5.0.0",
  "pytest>=8.3.3,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "respx>=0.22.0,<1.0.0",
  "ruff>=0.7.3,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
plugins = []
exclude = ["^frontend/", "^backend/db/migrations/"]

[[tool.mypy.overrides]]
module = ["feedparser", "fitz", "langgraph.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "eval: marks search quality evaluation tests that are opt-in",
  "integration: marks tests that exercise live external services",
]
